--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
     "multer": "^1.4.2",
-    "pg": "^7.12.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "pg": "^8.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -32,7 +31,6 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
-    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.10.1"
   }
 }
