--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "express-jwt": "^6.0.0",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
+    "npm": "^6.14.6",
     "pg": "^8.0.3"
   },
   "devDependencies": {
