--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
     "npm": "^6.14.6",
