--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "npm": "^6.14.6",
     "pg": "^8.0.3"
   },
