--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "lodash": "^4.17.19",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "npm": "^6.14.6",
