--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lodash": "^4.17.19",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
-    "npm": "^6.14.6",
+    "npm": "^6.14.7",
     "pg": "^8.0.3"
   },
   "devDependencies": {
@@ -41,6 +41,7 @@
     "jest": "^26.1.0",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
-    "sucrase": "^3.10.1"
+    "sucrase": "^3.10.1",
+    "supertest": "^4.0.2"
   }
 }
