wip(order) creating migrate

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,19 @@
-/* environment dev */
+PORT=3777
 
-DATABASE_HOST=""
-DATABASE_NAME=""
-DATABASE_USER=""
-DATABASE_PASSWORD=""
+development
 
-/* prod */
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
 
-DATABASE_URL=""
+staging
+
+DATABASE_STAGE_HOST=
+DATABASE_STAGE_NAME=
+DATABASE_STAGE_USER=
+DATABASE_STAGE_PORT=
+DATABASE_STAGE_PASSWORD=
 
 BASE_API=v1
-JWT_SECRET="" 
+JWT_SECRET=
