--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "lodash": "^4.17.19",
     "multer": "^1.4.2",
+    "node-correios": "^3.0.2",
     "nodemailer": "^6.4.10",
-    "npm": "^6.14.7",
+    "npm": "^6.14.8",
     "pg": "^8.0.3"
   },
   "devDependencies": {
