--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sid",
+  "name": "easyecom",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,7 @@
     "test": "jest",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "migrate": "npx knex migrate:latest",
-    "seed": "npx knex seed:run"
+    "migrate": "npx knex migrate:latest"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +27,7 @@
     "multer": "^1.4.2",
     "node-correios": "^3.0.2",
     "nodemailer": "^6.4.10",
+    "nodemon": "^2.0.6",
     "npm": "^6.14.8",
     "pg": "^8.0.3"
   },
@@ -44,7 +44,6 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^26.1.0",
-    "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
     "sucrase": "^3.10.1",
     "supertest": "^4.0.2"
