--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,10 +27,12 @@
     "lodash": "^4.17.19",
     "multer": "^1.4.2",
     "node-correios": "^3.0.2",
+    "node-pagseguro": "^0.1.9",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.6",
     "npm": "^6.14.8",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
