refactor(routes): implement routes folders

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@ PORT=3777
 
 development
 
-DATABASE_HOST=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
+DATABASE_HOST=localhost
+DATABASE_NAME=easyecon
+DATABASE_USER=easyecon
+DATABASE_PASSWORD=easycon
 
 staging
 
