--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,32 @@
 version: '3'
 
 services:
-  app:
-    build: .
-    container_name: "api-easyecom"
-    command: sh -c "npm run
-     migrate && npm run dev"
-    ports:
-      - 3777:3777
-    volumes:
-      - .:/usr/app
-    links:
-      - db
-    depends_on:
-      - db
-    environment:
-      DB_HOST: ${DATABASE_HOST}
-      DB_USER: ${DATABASE_USER}
-      DB_PASS: ${DATABASE_PASSWORD}
-      DB_NAME: ${DATABASE_NAME}
-  db:
-    image: postgres:alpine
-    container_name: db-easyecom
-    ports:
-      - "5432:5432"
-    environment:
-       - POSTGRES_USER=${DATABASE_USER}
-       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-       - POSTGRES_NAME=${DATABASE_NAME}
+    #   app:
+    #     build: .
+    #     container_name: "api-easyecom"
+    #     command: sh -c "npm run
+    #      migrate && npm run dev"
+    #     ports:
+    #       - 3777:3777
+    #     volumes:
+    #       - .:/usr/app
+    #     links:
+    #       - db
+    #     depends_on:
+    #       - db
+    #     environment:
+    #       DB_HOST: ${DATABASE_HOST}
+    #       DB_USER: ${DATABASE_USER}
+    #       DB_PASS: ${DATABASE_PASSWORD}
+    #       DB_NAME: ${DATABASE_NAME}
+    db:
+        image: postgres:alpine
+        container_name: db-easyecom
+        ports:
+            - '5432:5432'
+        environment:
+            - POSTGRES_USER=${DATABASE_USER}
+            - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+            - POSTGRES_NAME=${DATABASE_NAME}
 networks:
-  overlay:
+    overlay:
