--- a/package.json
+++ b/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "easyecom",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "migrate": "npx knex migrate:latest"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "date-fns": "^2.16.1",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "i": "^0.3.6",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.1",
-    "lodash": "^4.17.19",
-    "multer": "^1.4.2",
-    "node-correios": "^3.0.2",
-    "node-pagseguro": "^0.1.9",
-    "nodemailer": "^6.4.10",
-    "nodemon": "^2.0.6",
-    "npm": "^6.14.8",
-    "pg": "^8.0.3",
-    "xml2json": "^0.12.0"
-  },
-  "devDependencies": {
-    "@sucrase/jest-plugin": "^2.0.0",
-    "@types/jest": "^26.0.3",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "jest": "^26.1.0",
-    "prettier": "^1.19.1",
-    "sucrase": "^3.10.1",
-    "supertest": "^4.0.2"
-  }
+    "name": "easyecom",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js",
+        "migrate": "npx knex migrate:latest",
+        "seed": "npx knex seed:run"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "axios": "^0.21.0",
+        "bcrypt": "^5.0.0",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "date-fns": "^2.16.1",
+        "dotenv": "^8.2.0",
+        "ejs": "^3.1.3",
+        "express": "^4.17.1",
+        "express-jwt": "^6.0.0",
+        "i": "^0.3.6",
+        "jsonwebtoken": "^8.5.1",
+        "knex": "^0.21.1",
+        "lodash": "^4.17.19",
+        "multer": "^1.4.2",
+        "node-correios": "^3.0.2",
+        "node-pagseguro": "^0.1.9",
+        "nodemailer": "^6.4.10",
+        "nodemon": "^2.0.6",
+        "npm": "^6.14.8",
+        "pg": "^8.0.3",
+        "xml2json": "^0.12.0"
+    },
+    "devDependencies": {
+        "@sucrase/jest-plugin": "^2.0.0",
+        "@types/jest": "^26.0.3",
+        "babel-eslint": "^10.0.3",
+        "eslint": "^6.6.0",
+        "eslint-config-airbnb": "^18.0.1",
+        "eslint-config-prettier": "^6.5.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.16.0",
+        "eslint-plugin-react-hooks": "^1.7.0",
+        "jest": "^26.1.0",
+        "prettier": "^1.19.1",
+        "sucrase": "^3.10.1",
+        "supertest": "^4.0.2"
+    }
 }
