--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "i": "^0.3.6",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
+        "knex-paginate": "^1.2.3",
+        "knex-paginator": "^2.0.0",
         "lodash": "^4.17.19",
         "multer": "^1.4.2",
         "node-correios": "^3.0.2",
