--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.21.0",
-        "bcrypt": "^5.0.0",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "date-fns": "^2.16.1",
@@ -31,6 +30,7 @@
         "lodash": "^4.17.19",
         "multer": "^1.4.2",
         "node-correios": "^3.0.2",
+        "node-gyp": "^7.1.2",
         "node-pagseguro": "^0.1.9",
         "nodemailer": "^6.4.10",
         "nodemon": "^2.0.6",
