--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
         "start": "node src/server.js",
         "dev": "nodemon src/server.js",
+        "pretest": "NODE_ENV=test knex migrate:latest",
+        "test": "NODE_ENV=test jest",
+        "posttest": "NODE_ENV=test knex migrate:rollback --all",
         "migrate": "npx knex migrate:latest",
         "seed": "npx knex seed:run"
     },
@@ -25,21 +27,17 @@
         "i": "^0.3.6",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
-        "knex-paginate": "^1.2.3",
-        "knex-paginator": "^2.0.0",
         "lodash": "^4.17.19",
         "multer": "^1.4.2",
         "node-correios": "^3.0.2",
-        "node-gyp": "^7.1.2",
         "node-pagseguro": "^0.1.9",
         "nodemailer": "^6.4.10",
-        "nodemon": "^2.0.6",
         "npm": "^6.14.8",
         "pg": "^8.0.3",
         "xml2json": "^0.12.0"
     },
     "devDependencies": {
-        "@sucrase/jest-plugin": "^2.0.0",
+        "nodemon": "^2.0.6",
         "@types/jest": "^26.0.3",
         "babel-eslint": "^10.0.3",
         "eslint": "^6.6.0",
@@ -51,8 +49,8 @@
         "eslint-plugin-react": "^7.16.0",
         "eslint-plugin-react-hooks": "^1.7.0",
         "jest": "^26.1.0",
+        "sqlite3": "^5.0.0",
         "prettier": "^1.19.1",
-        "sucrase": "^3.10.1",
         "supertest": "^4.0.2"
     }
 }
