--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "ejs": "^3.1.3",
         "express": "^4.17.1",
         "express-jwt": "^6.0.0",
+        "faker": "^5.1.0",
         "i": "^0.3.6",
         "jsonwebtoken": "^8.5.1",
         "knex": "^0.21.1",
@@ -51,6 +52,7 @@
         "jest": "^26.1.0",
         "sqlite3": "^5.0.0",
         "prettier": "^1.19.1",
-        "supertest": "^4.0.2"
+        "supertest": "^4.0.2",
+        "factory-girl": "^5.0.4"
     }
 }
