build(images): add images in the AWS S3

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,22 @@
-PORT=3777
+PORT=
 
 development
+DB_DEVELOPMENT=
 
-DATABASE_HOST=localhost
-DATABASE_NAME=easyecon
-DATABASE_USER=easyecon
-DATABASE_PASSWORD=easycon
+DATABASE_HOST=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
 
-staging
+test
+DATABASE_HOST_TEST=
+DATABASE_NAME_TEST=
+DATABASE_USER_TEST=
+DATABASE_PASSWORD_TEST=
 
-DATABASE_STAGE_HOST=
-DATABASE_STAGE_NAME=
-DATABASE_STAGE_USER=
-DATABASE_STAGE_PORT=
-DATABASE_STAGE_PASSWORD=
-
-BASE_API=v1
+BASE_API=
 JWT_SECRET=
+
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_KEY=
+AWS_REGION=
