--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "jest": "^26.1.0",
         "nodemon": "^2.0.6",
         "prettier": "^1.19.1",
+        "sonar-scanner": "^3.1.0",
         "supertest": "^4.0.2"
     }
 }
